[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/background/alobbyschool_bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/case_3/trial_1/arc_b/bposttrial_day1.gd" type="Script" id=2]
[ext_resource path="res://scenes/character_scenes/character_write.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/character_scenes/character_temichlegs.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/character_scenes/character_sonya.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/investigation_v3.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/character_scenes/character_sewa.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/character_scenes/character_layton.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "asd",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back_ground" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 9 )]
visible = false
position = Vector2( 1, 115 )

[node name="character_temich" parent="characters_all" instance=ExtResource( 4 )]
position = Vector2( 10.5947, 190.703 )

[node name="character_sewa" parent="characters_all" instance=ExtResource( 7 )]
visible = false
position = Vector2( 4.23792, 130.314 )

[node name="character_lentoln" parent="characters_all" instance=ExtResource( 8 )]
visible = false
position = Vector2( -25, 171 )

[node name="character_werur" parent="characters_all" instance=ExtResource( 3 )]
visible = false
position = Vector2( -15, 190.703 )

[node name="character_sonya" parent="characters_all" instance=ExtResource( 5 )]
visible = false
position = Vector2( 4.45447, 192.434 )

[node name="POIs" type="Node2D" parent="."]

[node name="investigation_screen" parent="." instance=ExtResource( 6 )]

[connection signal="next" from="investigation_screen" to="." method="_on_investigation_screen_next"]
